@@ -3,6 +3,7 @@ Object.defineProperty(exports, "__esModule", { value: true });
 const config = require("./config");
 const regexp = require("./regexp");
 const util = require("./util");
+const colors = require("colors");
 const fs = require("fs");
 exports.current = [];
 function get() {
@@ -48,10 +49,44 @@ function match(x) {
 }
 exports.match = match;
 function release(file = true) {
+    const ext = config.data.markdown ? 'md' : 'txt';
+    let isDir = false;
+    let filename = util.replacer(config.data.changelog.dist, { interpolate: true });
     exports.current = match(get());
-    if (file) {
-        fs.writeFileSync(config.data.changelog.dist + 'changelog-' + config.projectPackage.version + '.' + (config.data.markdown ? 'md' : 'txt'), util.stringify(exports.current));
+    // check if the file exists
+    try {
+        fs.accessSync(filename, fs.constants.F_OK);
+        isDir = false;
     }
+    catch (err) {
+        // check if its a directory
+        try {
+            fs.statSync(filename).isDirectory();
+            isDir = true;
+        }
+        catch (err) {
+            isDir = false;
+        }
+    }
+    // if it's a directory, use the default changelog filename
+    if (isDir) {
+        if (!filename.endsWith('/') && !filename.endsWith('\\')) {
+            filename += '/';
+        }
+        filename += 'changelog-' +
+            (config.projectPackage.version !== undefined && config.projectPackage.version !== null ?
+                config.projectPackage.version :
+                (console.info(colors.yellow('WARNING: No version number found in package file. A timestamp will be used in the changelog filename.')), Date.now().toString())) + '.' + ext;
+    }
+    // Write the contents to the file!
+    fs.writeFile(filename, util.stringify(exports.current), (err) => {
+        if (!err) {
+            console.info(colors.green('Finished writing changelog. Wrote to'), colors.bgGreen.white(`${filename}`));
+        }
+        else {
+            console.error(colors.red('ERROR: Failed to create changelog at'), colors.red.underline(`${filename}`), colors.red('. Perhaps the directory doesn\'t exist?'));
+        }
+    });
 }
 exports.release = release;
 //# sourceMappingURL=changelog.js.map
