@@ -1,87 +1,75 @@
 "use strict";
 Object.defineProperty(exports, "__esModule", { value: true });
-const changelog = require("./changelog");
 const config = require("./config");
 const fs = require("fs");
 const colors = require("colors");
 const util = require("./util");
-let toc = '';
-function replacer(line) {
-    /*
-    flag_s: single '%'
-    flag_m: double '%'
-    */
-    let flag_s = false, flag_m = false;
-    let option = '';
-    let output = '';
-    for (let i = 0; i < line.length; i++) {
-        if (flag_s || flag_m) {
-            if (line[i] !== '%') {
-                option += line[i];
-                continue;
-            }
-            else if (line[i] === '%' && !flag_m) {
-                flag_s = false;
-                flag_m = true;
-                continue;
-            }
-            if (option !== '') {
-                if (option === 'changelog') {
-                    if (changelog.current.length === 0) {
-                        changelog.release(false);
-                    }
-                    for (let j = 0; j < changelog.current.length; j++) {
-                        output += `${changelog.current[j]}\r\n`;
-                    }
-                }
-                else if (option === 'toc') {
-                    output += `${toc}\r\n`;
-                }
-                else {
-                    if (config.projectPackage !== undefined)
-                        output += config.projectPackage[option];
-                }
-                option = ''; // clear option string
-            }
-            flag_s = false;
-            flag_m = false;
-            continue;
-        }
-        if (line[i] === '%') {
-            flag_s = true;
-            continue;
-        }
-        output += line[i];
-    }
-    return output;
-}
+exports.toc = '';
 function generateToc() {
     let i = 1;
+    // loop through each tempalate section
     for (const x in config.data.docs.template) {
-        toc += `${i}. ${x}\r\n`;
+        // (i)      (x)
+        //  1. Section Title
+        exports.toc += `${i}. ${x}\r\n`;
         i++;
     }
 }
 function build() {
     const data = [];
+    // go ahead and generate the table of contents in case we need it later
     generateToc();
-    data.push((config.data.markdown ? '# ' : '') + replacer(config.data.docs.title) + '\r\n\r\n');
+    // add the document title
+    data.push((config.data.markdown ? '# ' : '') + util.replacer(config.data.docs.title, { interpolate: true }) + '\r\n\r\n');
+    // TODO
+    // add subsections by checking if the section is an object rather than a string
+    // recursiveness will really come in handy
+    // loop through each section
     for (const x in config.data.docs.template) {
-        data.push((config.data.markdown ? '## ' : '') + `${x}\r\n`); // title
+        // add the section title
+        data.push((config.data.markdown ? '## ' : '') + `${x}\r\n`);
+        // if we're not writing in markdown, add a little section underline
         if (!config.data.markdown)
             data.push('----------------------');
-        data.push(replacer(config.data.docs.template[x])); // format the line's specified options
-        data.push('\r\n'); // extra newline between sections
+        /// interpolate user specified package properties
+        data.push(util.replacer(config.data.docs.template[x], { interpolate: true }));
+        // add an extra newline between sections
+        data.push('\r\n');
     }
     return data;
 }
 exports.build = build;
 function release() {
+    const ext = config.data.markdown ? 'md' : 'txt';
     const contents = build();
-    // TODO
-    // Add option in config
-    // for custom filename
-    const filename = config.data.docs.dist + 'docs-' + config.projectPackage.version + '.md';
+    let filename = util.replacer(config.data.docs.dist, { interpolate: true });
+    let isDir = false;
+    // check if the file exists
+    try {
+        fs.accessSync(filename, fs.constants.F_OK);
+        isDir = false;
+    }
+    catch (err) {
+        // check if its a directory
+        try {
+            fs.statSync(filename).isDirectory();
+            isDir = true;
+        }
+        catch (err) {
+            isDir = false;
+        }
+    }
+    // if it's a directory, use the default changelog filename
+    if (isDir) {
+        if (!filename.endsWith('/') && !filename.endsWith('\\')) {
+            filename += '/';
+        }
+        filename += 'docs-' +
+            (config.projectPackage.version !== undefined && config.projectPackage.version !== null ?
+                config.projectPackage.version :
+                (console.info(colors.yellow('WARNING: No version number found in package file. A timestamp will be used in the documentation filename.')), Date.now().toString())) + '.' + ext;
+    }
+    // Write the doc contents to the file!
     fs.writeFile(filename, util.stringify(contents), (err) => {
         if (!err) {
             console.info(colors.green('Finished writing documentation. Wrote to'), colors.bgGreen.white(`${filename}`));
