@@ -3,23 +3,26 @@ Object.defineProperty(exports, "__esModule", { value: true });
 const fs = require("fs");
 const archiver = require("archiver");
 const config = require("./config");
+const util = require("./util");
 const colors = require("colors");
 function release() {
     // TODO
     // add verifier for config paths, ensuring they have a '/' character at the end, or '\' if Windows, etc.
-    // add custom export filename in config
-    // change to array for compression property, allowing multiple formats to be exported
-    let filename;
     let archive;
+    let filename;
     config.data.source.compression.forEach((type) => {
         if (type === 'zip') {
-            filename = config.data.source.dist + 'src-' + config.projectPackage.version + '.zip';
+            filename = util.replacer(config.data.source.dist, { interpolate: true, ext: 'zip' });
+            if (!filename.endsWith('zip'))
+                filename += 'zip';
             archive = archiver('zip', {
                 zlib: { level: 9 }
             });
         }
         else if (type === 'tar') {
-            filename = config.data.source.dist + 'src-' + config.projectPackage.version + '.tar.gz';
+            filename = util.replacer(config.data.source.dist, { interpolate: true, ext: 'tar.gz' });
+            if (!filename.endsWith('tar.gz'))
+                filename += 'tar.gz';
             archive = archiver('tar', {
                 gzip: true,
                 gzipOptions: { level: 9 }
