@@ -1,6 +1,8 @@
 "use strict";
 Object.defineProperty(exports, "__esModule", { value: true });
+const changelog = require("./changelog");
 const config = require("./config");
+const docs = require("./docs");
 const colors = require("colors");
 exports.regexp_int = '((\\d{2,4}(\.(\\d[1-9])|([1-9]\\d))?)|[1-9])';
 exports.regexp_string = '[a-zA-Z0-9]+';
@@ -67,10 +69,91 @@ function links(x) {
     }
     return data;
 }
+function interpolater(line, ext) {
+    /*
+    flag_s: single '%'
+    flag_m: double '%'
+    */
+    let flag_s = false, flag_m = false;
+    let option = '';
+    let output = '';
+    // Loop through the line string
+    for (let i = 0; i < line.length; i++) {
+        // If one of the flags is set
+        if (flag_s || flag_m) {
+            // and it's an 'e'
+            if (line[i] === 'e' && flag_s) {
+                // add file extension parameter
+                output += ext !== undefined ? ext : (config.data.markdown ? 'md' : 'txt');
+                // clear flags and move to next char
+                flag_s = false;
+                flag_m = false;
+                continue;
+            }
+            else if (line[i] !== '%' && flag_m) {
+                // go ahead and add the character to the option string
+                option += line[i];
+                continue;
+                // and the current character is a '%' ('%%') and the flag is not already set
+            }
+            else if (line[i] === '%' && !flag_m) {
+                // set the flags correspondingly, for we are now reading an interpolater
+                flag_s = false;
+                flag_m = true;
+                continue;
+                // and the current character is 'e' and the flag is not already set
+            }
+            // if the option is not null
+            if (option !== '') {
+                // and the option is changelog
+                if (option === 'changelog') {
+                    // if we have not yet built the changelog
+                    if (changelog.current.length === 0) {
+                        // then go ahead and do that, without writing to the changelog's output file
+                        changelog.release(false);
+                    }
+                    // loop through the changelog array
+                    for (let j = 0; j < changelog.current.length; j++) {
+                        // and append each line to the output
+                        output += `${changelog.current[j]}\r\n`;
+                    }
+                    // and the option is toc
+                }
+                else if (option === 'toc') {
+                    // add the table of contents
+                    output += `${docs.toc}`;
+                    // and it's a package variable
+                }
+                else {
+                    // if the package is loaded and good to go
+                    if (config.projectPackage !== undefined)
+                        // then get the property from the package file
+                        output += config.projectPackage[option];
+                }
+                // clear option string
+                option = '';
+            }
+            // we finished reading an interpolater, so reset the flags
+            flag_s = false;
+            flag_m = false;
+            continue;
+        }
+        // if the character is a '%'
+        if (line[i] === '%') {
+            // then hint for the next iteration that we might be reading an interpolater string
+            flag_s = true;
+            continue;
+        }
+        // nothing happened, just add the character
+        output += line[i];
+    }
+    return output;
+}
 /*
   {
     links: true,
-    searchPackage: true
+    interpolate: true,
+    ext: 'md'
   }
 */
 function replacer(x, options) {
@@ -78,8 +161,8 @@ function replacer(x, options) {
     if (options.links) {
         output = links(output);
     }
-    if (options.searchPackage) {
-        output;
+    if (options.interpolate) {
+        output = interpolater(output, options.ext !== undefined ? options.ext : undefined);
     }
     return output;
 }
